--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,3 +1,6 @@
+/* styles/globals.css */
+@import 'tailwindcss/tailwind.css';
+
 
 body {
   margin: 0;
@@ -9,21 +12,32 @@ body {
   padding: 20px;
   background: whitesmoke;
 }
+
 img {
-  height: 80px;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
+
 .card {
   background: white;
   padding: 20px;
   text-align: center;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 
 .productsWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
+  padding-top: 20px; /* Add padding to the top */
 }
+
 .btn {
   border: none;
   outline: none;
@@ -43,11 +57,13 @@ img {
 .heading {
   padding: 25px 0;
 }
+
 .cartCount {
   font-weight: bold;
   text-transform: uppercase;
   margin-left: 40px;
 }
+
 .navLink {
   text-decoration: none;
   color: black;
